--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "desafio-axur",
+  "name": "challange",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,8 +9,11 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "vue": "^2.6.11",
+    "vue-axios": "^2.1.5",
+    "vue-filter-date-format": "^1.3.1",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.3"
   },
