--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "flush-promises": "^1.0.2",
+    "moxios": "^0.4.0",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
     "vue-filter-date-format": "^1.3.1",
